# Runtime

./: .gitignore  .swiftlint.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LinuxMain.swift  Package.resolved  Package.swift  README.md  Runtime.podspec
.github/workflows/: tests.yml  wasi.yml
Runtime/: DefaultValue.swift  Errors.swift  Factory.swift  GettersSetters.swift  IntegerConvertible.swift  Metadata.swift  MetadataHelpers.swift  MetadataModels.swift  Pointer+Extensions.swift  Runtime.h
Runtime.xcodeproj/: project.pbxproj
Runtime.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Runtime/Factory/: Factory.swift  (+1 more)
RuntimeTests/: FactoryTests.swift  GetSetClassTests.swift  GetSetStructTests.swift  MetadataTests.swift  NominalTypeTest.swift  ValuePointerTests.swift  ValueWitnessTableTests.swift
Scripts/: ProviderGen.py  TestCaseGen.py
Sources/: CMakeLists.txt
Sources/Runtime/: CMakeLists.txt  Runtime.h  Runtime.swift
Sources/Runtime/Extensions/: RuntimeExtensions.swift
Sources/Runtime/Factory/: DefaultValue.swift  Factory.swift
Sources/Runtime/Layouts/: ClassHeader.swift  ClassMetadataLayout.swift  ClassTypeDescriptor.swift  EnumMetadataLayout.swift  EnumTypeDescriptor.swift  ExistentialContainter.swift  FieldDescriptor.swift  FunctionMetadataLayout.swift  MetadataLayoutType.swift  NominalTypeDescriptor.swift  ProtocolDescriptor.swift  ProtocolMetadataLayout.swift  ProtocolTypeContainer.swift  StructMetadataLayout.swift  StructTypeDescriptor.swift  TargetTypeGenericContextDescriptorHeader.swift  TupleMetadataLayout.swift  TypeDescriptor.swift  ValueWitnessTable.swift
Sources/Runtime/Metadata/: ClassMetadata.swift  EnumMetadata.swift  FuntionMetadata.swift  Metadata.swift  MetadataType.swift  NominalMetadataType.swift  ProtocolMetadata.swift  StructMetadata.swift  TupleMetadata.swift
Sources/Runtime/Models/: Case.swift  Errors.swift  FunctionInfo.swift  Kind.swift  PropertyInfo.swift  TypeInfo.swift  TypeInfoConvertible.swift
Sources/Runtime/Pointers/: Pointers.swift  RelativePointer.swift  RelativeVectorPointer.swift  Union.swift  Vector.swift
Sources/Runtime/Utilities/: GetFieldAt.swift  GettersSetters.swift  IntegerConvertible.swift  Pointer+Extensions.swift  RetainCounts.swift  String+Extensions.swift  SwiftRuntime.swift
Tests/: LinuxMain.swift
cruntime/: Package.swift  module.modulemap
(+64 files in other folders)
